--- a/frontend/src/app/views/login/login.component.html
+++ b/frontend/src/app/views/login/login.component.html
@@ -7,7 +7,7 @@
   
         
           <label style="float: left;" for="">Email</label>
-          <input class="form-control m-2" type="email" placeholder="Insira seu email" [(ngModel)]="requestLogin.email">
+          <input class="form-control m-2" type="email" placeholder="Insira seu email" [(ngModel)]="requestLogin.username">
   
           <label style="float: left;" for="">Senha</label>
           <input class="form-control m-2" type="password" placeholder="Insira sua senha" [(ngModel)]="requestLogin.password">
