--- a/frontend/src/app/views/login/login.component.html
+++ b/frontend/src/app/views/login/login.component.html
@@ -6,12 +6,12 @@
       <div class="card-body p-4">
         
           <form (ngSubmit)="formSubmit()">
-            <label style="float: left;" for="">Username</label>
+            <label style="float: left;" for="">Email</label>
             <input class="form-control m-2" 
               type="text" 
-              placeholder="Insira seu username" 
-              [(ngModel)]="loginData.username"
-              name="username"
+              placeholder="Insira seu email" 
+              [(ngModel)]="loginData.email"
+              name="email"
               required>
     
             <label style="float: left;" for="">Senha</label>
