--- a/frontend/src/app/views/login/login.component.html
+++ b/frontend/src/app/views/login/login.component.html
@@ -12,6 +12,7 @@
               placeholder="Insira seu email" 
               [(ngModel)]="loginData.email"
               name="email"
+              id="email"
               required>
     
             <label style="float: left;" for="">Senha</label>
@@ -20,6 +21,7 @@
               placeholder="Insira sua senha" 
               [(ngModel)]="loginData.password"
               name="password"
+              id="password"
               required>
           
           <button class="btn btn-primary btn-block m-2" type="submit">Entrar</button>
